--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "motion": "^12.23.12",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.4.3",
     "prettier": "^3.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
